--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^9.6.0",
+		"bits-ui": "^0.21.16",
+		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -46,8 +48,13 @@
 		"prettier-plugin-svelte": "^3.2.6",
 		"publint": "^0.2.0",
 		"svelte": "^5.0.0",
+		"tailwind-merge": "^2.5.4",
+		"tailwind-variants": "^0.3.0",
 		"typescript": "^5.3.2",
 		"vite": "^5.0.11",
 		"vitest": "^2.0.4"
+	},
+	"dependencies": {
+		"tailwindcss": "^3.4.14"
 	}
 }
