--- a/package.json
+++ b/package.json
@@ -1,63 +1,38 @@
 {
 	"name": "unthynck",
 	"version": "0.0.1",
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev --host",
-		"build": "vite build && npm run package",
+		"build": "vite build",
 		"preview": "vite preview",
-		"package": "svelte-kit sync && svelte-package && publint",
-		"prepublishOnly": "npm run package",
-		"lint": "eslint . && prettier --check .",
-		"test:unit": "vitest",
-		"test": "npm run test:unit -- --run",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"lint": "prettier --check . && eslint ."
 	},
 	"files": [
 		"dist",
 		"!dist/**/*.test.*",
 		"!dist/**/*.spec.*"
 	],
-	"sideEffects": [
-		"**/*.css"
-	],
-	"svelte": "./dist/index.js",
-	"types": "./dist/index.d.ts",
-	"type": "module",
-	"exports": {
-		".": {
-			"types": "./dist/index.d.ts",
-			"svelte": "./dist/index.js"
-		}
-	},
-	"peerDependencies": {
-		"svelte": "^5.0.0"
-	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@eslint/compat": "^1.2.3",
+		"@sveltejs/adapter-static": "^3.0.6",
 		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/package": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@types/eslint": "^9.6.0",
-		"bits-ui": "^0.21.16",
-		"clsx": "^2.1.1",
 		"eslint": "^9.7.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
-		"publint": "^0.2.0",
 		"svelte": "^5.0.0",
-		"typescript": "^5.3.2",
-		"vite": "^5.0.11",
-		"vitest": "^2.0.4"
+		"vite": "^5.4.11"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-static": "^3.0.6",
 		"firebase": "^11.0.2",
 		"firebase-tools": "^13.27.0",
-		"lodash": "^4.17.21",
 		"svelte-carousel": "^1.0.25",
-		"tailwindcss": "^3.4.14"
+		"vitest": "^2.1.8"
 	}
 }
